--- a/client/src/elements/organisms/tool-selection.css
+++ b/client/src/elements/organisms/tool-selection.css
@@ -17,7 +17,7 @@ tool-selection::after {
   position: absolute;
   bottom: 0;
   left: var(--q-space-base);
-  border-bottom: 1px solid var(--q-color-gray-2);
+  border-bottom: 1px solid var(--q-color-gray-4);
 }
 
 tool-selection a {
@@ -25,4 +25,8 @@ tool-selection a {
   flex-direction: column;
   align-items: center;
   margin: var(--q-space-base);
+}
+
+tool-selection a button-primary {
+  margin-bottom: calc(var(--q-space-base) / 2);
 }
