improves the tool-selection grid style using grid layout

--- a/client/src/elements/organisms/tool-selection.css
+++ b/client/src/elements/organisms/tool-selection.css
@@ -1,8 +1,13 @@
 tool-selection {
-  display: flex;
-  justify-content: flex-start;
-  margin: 0 calc(var(--q-space-base) * -1) var(--q-space-base) calc(var(--q-space-base) * -1);
-  position: relative; 
+  padding: calc(var(--q-space-base) * 2) 0;
+  border-top: 1px solid var(--q-color-gray-4);
+  border-bottom: 1px solid var(--q-color-gray-4);
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: calc(var(--q-space-base) * 2) calc(var(--q-space-base) / 2);
+
+  text-align: center;
 }
 
 tool-selection a, tool-selection a:hover, tool-selection a:visited {
@@ -10,23 +15,14 @@ tool-selection a, tool-selection a:hover, tool-selection a:visited {
   text-decoration: none;
 }
 
-tool-selection::after {
-  content: '';
-  display: block;
-  width: calc(100% - (var(--q-space-base) * 2));
-  position: absolute;
-  bottom: 0;
-  left: var(--q-space-base);
-  border-bottom: 1px solid var(--q-color-gray-4);
-}
-
-tool-selection a {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: var(--q-space-base);
+tool-selection a:hover button-primary button {
+  /* this styles are doubled from button-primary.css to have the button appear hovered when the a around it is */
+  color: var(--q-color-black);
+  background-color: var(--q-color-primary-3);
 }
 
 tool-selection a button-primary {
-  margin-bottom: calc(var(--q-space-base) / 2);
+  width: 48px;
+  margin-left: auto;
+  margin-right: auto;
 }
