increases size of tool icon in item list, no wrapping of text to 2nd line in item list

--- a/client/src/elements/atoms/box-icon.css
+++ b/client/src/elements/atoms/box-icon.css
@@ -22,6 +22,11 @@ box-icon path, box-icon polygon, box-icon circle {
   fill: currentColor;
 }
 
+box-icon.size-medium svg {
+  width: 16px;
+  height: 16px;
+}
+
 box-icon.size-big svg {
   width: 20px;
   height: 20px;
