--- a/client/src/elements/molecules/item-list-entry.css
+++ b/client/src/elements/molecules/item-list-entry.css
@@ -27,6 +27,9 @@ item-list-entry .tool-icon {
 
 item-list-entry span {
   width: calc((100% - (2 * 26px)) / 3);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 item-list-entry delete-button {
