--- a/client/src/elements/molecules/q-messages.css
+++ b/client/src/elements/molecules/q-messages.css
@@ -8,10 +8,9 @@ q-messages {
 .q-message {
   display: flex;
   border: 1px solid currentColor;
-  margin-bottom: calc(var(--q-space-base)/2);
-}
-.q-message svg {
-  fill: currentColor;
+  margin-bottom: var(--q-space-base);
+  padding: calc(var(--q-space-base) / 2);
+  align-items: center;
 }
 
 .q-message .message-icon {
@@ -19,40 +18,46 @@ q-messages {
   align-self: center;
 }
 
-.q-message button {
-  border: none;
-  background: none;
-  font-weight: bold;
-  color: currentColor;
+.q-message button-tertiary {
   margin-left: auto;
-  margin-right: calc(var(--q-space-base)/2);
-  outline: none;
-  cursor: pointer;
 }
 
 .q-message--success {
   color: var(--q-color-success);
   background: var(--q-color-success--light);
 }
+.q-message--sucess path {
+   fill: var(--q-color-success);
+}
 
 .q-message--info {
   color: var(--q-color-info);
   background: var(--q-color-info--light);
+}
+.q-message--info path {
+   fill: var(--q-color-info);
 }
 
 .q-message--warning {
   color: var(--q-color-warning);
   background: var(--q-color-warning--light);
 }
+.q-message--warning path {
+   fill: var(--q-color-warning);
+}
 
 .q-message--error {
   color: var(--q-color-error);
   background: var(--q-color-error--light);
 }
+.q-message--error path {
+   fill: var(--q-color-error);
+}
 
 .q-message p {
   color: inherit;
   size: 16px;
+  margin: 0;
 }
 
 .q-message .js-error {
