--- a/client/src/elements/schema-editor/schema-editor.css
+++ b/client/src/elements/schema-editor/schema-editor.css
@@ -4,11 +4,16 @@ schema-editor {
 
 schema-editor fieldset {
   border: none;
+  padding: 0;
+  margin: 0;
+}
+
+schema-editor fieldset fieldset {
   padding: 0 0 0 20px;
   margin: calc(var(--q-space-base) * 2) 0 calc(var(--q-space-base) / 2) 0;
 }
 
-schema-editor fieldset.compact {
+schema-editor fieldset fieldset.compact {
   padding: 0 0 0 10px;
   margin-top: calc(var(--q-space-base) / 2);
 }
