--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -1,3 +1,12 @@
 .icon {
   display: block;
 }
+
+*::-webkit-scrollbar {
+  background: transparent;
+  width: 2px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--q-color-gray-5);
+}
