--- a/client/src/elements/schema-editor/schema-editor-table.css
+++ b/client/src/elements/schema-editor/schema-editor-table.css
@@ -3,11 +3,24 @@ schema-editor-table {
   margin-bottom: var(--q-space-base);
 }
 
+schema-editor-table .handsontable {
+  margin-bottom: calc(var(--q-space-base) / 2);
+}
+
+schema-editor-table .wtHolder {
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+schema-editor-table .rowHeader {
+  color: var(--q-text-ultralight-color);
+}
+
 schema-editor-table .wtHolder th {
   background-color: var(--q-color-gray-3);
   border-color: var(--q-color-gray-4);
   text-align: center;
-  vertical-align: middle;
   width: 30px;
 }
 
