feat: show articles with item in item-overview if configured in server

--- a/client/src/pages/item-overview.css
+++ b/client/src/pages/item-overview.css
@@ -33,3 +33,12 @@
 .item-overview__status icon-active-state {
   float: right;
 }
+
+.item-overview__meta {
+  margin-top: calc(var(--q-space-base) * 3);
+}
+
+.item-overview__meta ul {
+  list-style-type: none;
+  padding-left: 0;
+}
