fix: allow vertical scrolling in options pane

--- a/client/src/pages/editor.css
+++ b/client/src/pages/editor.css
@@ -22,20 +22,14 @@
 
   width: 280px;
   flex-grow: 0;
+
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .editor tool-status-bar {
   width: 52px;
   flex-grow: 0;
-}
-
-.editor main::-webkit-scrollbar {
-  background: transparent;
-  width: 2px;
-}
-
-.editor main::-webkit-scrollbar-thumb {
-  background: var(--q-color-gray-5);
 }
 
 .editor__options {
