--- a/client/src/pages/item-overview.css
+++ b/client/src/pages/item-overview.css
@@ -34,6 +34,10 @@
   float: right;
 }
 
+.item-overview__status > div {
+  margin-bottom: calc(var(--q-space-base) / 3);
+}
+
 .item-overview__meta {
   margin-top: calc(var(--q-space-base) * 3);
 }
