scrollbar in table is now bolder

--- a/client/src/elements/schema-editor/schema-editor-table.css
+++ b/client/src/elements/schema-editor/schema-editor-table.css
@@ -13,6 +13,10 @@ schema-editor-table .wtHolder {
   line-height: 18px;
 }
 
+schema-editor-table .ht_master .wtHolder::-webkit-scrollbar {
+  width: 8px;
+}
+
 schema-editor-table .rowHeader {
   color: var(--q-text-ultralight-color);
 }
