Move q-status-bar to q-bar

--- a/client/src/pages/editor.css
+++ b/client/src/pages/editor.css
@@ -78,3 +78,8 @@
 .editor__options schema-editor-wrapper schema-editor-wrapper schema-editor-wrapper {
   margin-bottom: 0;
 }
+
+.q-bar__back {
+  display: flex;
+  align-items: center;
+}
