--- a/client/src/elements/organisms/tool-status-bar.css
+++ b/client/src/elements/organisms/tool-status-bar.css
@@ -1,25 +1,14 @@
 tool-status-bar {
-  padding: calc(var(--q-space-base) / 2);
-
   display: flex;
-  flex-direction: column;
   align-items: center;
-
-  background: var(--q-color-gray-2);
-  border-left: 1px solid var(--q-color-gray-5);
+  padding: var(--q-space-base);
 }
 
 .tool-status-bar__group {
   display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
-.tool-status-bar__group:not(:last-child) {
-  margin-bottom: calc(var(--q-space-base) / 2);
-  border-bottom: 1px solid var(--q-color-gray-4);
-}
-
 .tool-status-bar__item {
-  margin-bottom: calc(var(--q-space-base) / 2);
+  margin-right: var(--q-space-base);
 }
