Define height of q-bar based on --q-space-base

--- a/client/src/elements/organisms/q-bar.css
+++ b/client/src/elements/organisms/q-bar.css
@@ -7,7 +7,7 @@ q-bar {
   padding: var(--q-space-base);
   position: fixed;
   width: 100%;
-  min-height: 56px;
+  height: calc(var(--q-space-base) * 7);
   top: 0px;
   z-index: 500;
 }
