--- a/client/src/elements/organisms/tool-status-bar.css
+++ b/client/src/elements/organisms/tool-status-bar.css
@@ -1,7 +1,7 @@
 tool-status-bar {
   display: flex;
   align-items: center;
-  padding: var(--q-space-base);
+  margin-left: calc(var(--q-space-base) * 2);
 }
 
 .tool-status-bar__group {
