--- a/client/src/elements/item-preview/preview-container.css
+++ b/client/src/elements/item-preview/preview-container.css
@@ -1,26 +1,8 @@
 preview-container {
   position: relative;
   display: block;
-  margin-top: calc(var(--q-space-base) + 9px);
-  margin-bottom: calc(var(--q-space-base) + 9px);
+  margin-top: var(--q-space-base);
+  margin-bottom: var(--q-space-base);
 
   padding: var(--q-space-base) calc(var(--q-space-base) * 2);
-}
-
-preview-container::before, preview-container::after {
-  content: '';
-  display: block;
-  height: 9px;
-  width: 100%;
-  background-repeat: repeat-x;
-  position: absolute;
-  left: 0;
-}
-
-preview-container::before {
-  top: -9px;
-}
-
-preview-container::after {
-  bottom: -9px;
 }
