--- a/client/src/elements/molecules/radio-button-group.css
+++ b/client/src/elements/molecules/radio-button-group.css
@@ -10,8 +10,8 @@ radio-button-group {
   position: relative;
   margin-bottom: calc(var(--q-ui-space) / 2);
   flex-shrink: 0;
-  width: 36px;
-  height: 36px;
+  width: 70px;
+  height: 30px;
 }
 
 .radio-button-group__option label {
@@ -36,19 +36,22 @@ radio-button-group {
 }
 
 .radio-button-group__option:first-child label {
-  border-top-left-radius: 18px;
-  border-bottom-left-radius: 18px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
   border-left-width: 1px;
+  border-right-width: 1px;
 }
 
 .radio-button-group__option:last-child label {
-  border-top-right-radius: 18px;
-  border-bottom-right-radius: 18px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-left-width: 1px;
   border-right-width: 1px;
 }
 
 .radio-button-group__option label:hover {
   background: var(--q-color-primary-3);
+  color: var(--q-color-white);
 }
 
 .radio-button-group__option label svg {
@@ -68,6 +71,7 @@ radio-button-group {
 
 .radio-button-group__option input[type="radio"]:checked ~ label {
   background: var(--q-color-primary-4);
+  color: var(--q-color-white);
 }
 
 .radio-button-group__option input[type="radio"]:checked ~ label svg {
