--- a/client/src/elements/organisms/q-bar.css
+++ b/client/src/elements/organisms/q-bar.css
@@ -37,6 +37,10 @@ q-bar {
   justify-content: flex-end;
 }
 
-.q-bar__right > * {
-  margin-right: 15px;
+.q-bar__right {
+  margin-right: calc(var(--q-space-base) * 2);
+}
+
+.q-bar__help {
+  padding-left: calc(var(--q-space-base) * 2);
 }
