--- a/client/src/elements/organisms/tool-status-bar.css
+++ b/client/src/elements/organisms/tool-status-bar.css
@@ -2,6 +2,8 @@ tool-status-bar {
   display: flex;
   align-items: center;
   margin-left: calc(var(--q-space-base) * 2);
+  padding-right: var(--q-space-base);
+  border-right: solid 1px var(--q-color-gray-3);
 }
 
 .tool-status-bar__group {
