--- a/client/src/styles/q-form.css
+++ b/client/src/styles/q-form.css
@@ -48,7 +48,8 @@
 }
 
 .q-form input[type="text"],
-.q-form input[type="url"] {
+.q-form input[type="url"],
+.q-form input[type="password"] {
   font-size: 14px;
   line-height: 1.3;
 
