--- a/client/src/elements/organisms/q-bar.css
+++ b/client/src/elements/organisms/q-bar.css
@@ -4,7 +4,6 @@ q-bar {
   align-items: center;
   background: var(--q-color-gray-1);
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.1);
-  padding: var(--q-space-base);
   position: fixed;
   width: 100%;
   height: calc(var(--q-space-base) * 7);
@@ -16,6 +15,7 @@ q-bar {
   width: 25%;
   display: flex;
   flex-flow: row wrap;
+  padding-left: calc(var(--q-space-base) * 3);
 }
 
 .q-bar__center {
@@ -35,10 +35,7 @@ q-bar {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-end;
-}
-
-.q-bar__right {
-  padding-right: calc(var(--q-space-base) * 2);
+  padding-right: calc(var(--q-space-base) * 3);
 }
 
 .q-bar__help {
