Revert --q-space-base back to 16px

--- a/client/src/elements/organisms/tool-status-bar.css
+++ b/client/src/elements/organisms/tool-status-bar.css
@@ -1,8 +1,8 @@
 tool-status-bar {
   display: flex;
   align-items: center;
-  margin-left: calc(var(--q-space-base) * 2);
-  padding-right: var(--q-space-base);
+  margin-left: var(--q-space-base);
+  padding-right: calc(var(--q-space-base) / 2);
   border-right: solid 1px var(--q-color-gray-4);
 }
 
@@ -12,5 +12,5 @@ tool-status-bar {
 }
 
 .tool-status-bar__item {
-  margin-right: var(--q-space-base);
+  margin-right: calc(var(--q-space-base) / 2);
 }
