--- a/client/src/elements/organisms/q-bar.css
+++ b/client/src/elements/organisms/q-bar.css
@@ -6,7 +6,7 @@ q-bar {
   box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.1);
   position: fixed;
   width: 100%;
-  height: calc(var(--q-space-base) * 7);
+  height: calc(var(--q-space-base) * 3.5);
   top: 0px;
   z-index: 500;
 }
@@ -15,7 +15,7 @@ q-bar {
   width: 25%;
   display: flex;
   flex-flow: row wrap;
-  padding-left: calc(var(--q-space-base) * 3);
+  padding-left: calc(var(--q-space-base) * 1.5);
 }
 
 .q-bar__center {
@@ -35,11 +35,11 @@ q-bar {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-end;
-  padding-right: calc(var(--q-space-base) * 3);
+  padding-right: calc(var(--q-space-base) * 1.5);
 }
 
 .q-bar__help {
-  padding-left: calc(var(--q-space-base) * 2);
+  padding-left: var(--q-space-base);
 }
 
 @media screen and (max-width: 1000px) {
