--- a/client/src/pages/editor.css
+++ b/client/src/pages/editor.css
@@ -12,33 +12,36 @@
   padding-bottom: var(--q-space-base);
   border-bottom: 1px solid var(--q-color-gray-4);
   margin-bottom: calc(var(--q-space-base) * 2);
-  max-width: 630px;
+  max-width: 85%;
+}
+
+.editor__preview {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.editor__preview item-preview {
+  flex-grow: 4;
+}
+
+.editor__preview .editor__options {
+  flex-grow: 1;
 }
 
 .editor__options {
-  background-color: var(--q-color-gray-2);
-  box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.25);
-  padding: calc(var(--q-space-base) * 2) var(--q-space-base);
-
-  width: 280px;
   flex-grow: 0;
-
-  height: 100%;
   overflow-y: scroll;
-}
-
-.editor tool-status-bar {
-  width: 52px;
-  flex-grow: 0;
-}
-
-.editor__options {
   --q-h1-size: 13px;
   --q-h2-size: 13px;
   --q-h3-size: 13px;
   --q-h4-size: 13px;
   --q-h5-size: 13px;
   --q-h6-size: 13px;
+}
+
+.editor tool-status-bar {
+  width: 52px;
+  flex-grow: 0;
 }
 
 .editor__options .schema-editor-input {
